--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cn.ucai.fulicenter.activity.MainActivity">
+    android:layout_height="match_parent">
+    <!-- 底部菜单栏-->
+    <RadioGroup
+        android:id="@+id/llMenu"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:background="#fff"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello world"/>
+        <RadioButton
+            android:id="@+id/btnNewGoods"
+            style="@style/menu_item_style"
+            android:drawableTop="@drawable/selector_menu_item_new_good"
+            android:text="新品"
+            android:button="@null"
+            android:checked="true"
+            android:textColor="@color/main_botton_text_color"/>
+
+        <RadioButton
+            android:id="@+id/btnBoutique"
+            style="@style/menu_item_style"
+            android:drawableTop="@drawable/selector_menu_item_boutique"
+            android:text="精选"
+            android:button="@null"
+            android:checked="false"/>
+
+        <RadioButton
+            android:id="@+id/btnCategory"
+            style="@style/menu_item_style"
+            android:drawableTop="@drawable/selector_menu_item_category"
+            android:text="分类"
+            android:button="@null"
+            android:checked="false"/>
+
+        <RelativeLayout
+            style="@style/style_menu_item">
+
+            <RadioButton
+                android:id="@+id/layoutCart"
+                style="@style/menu_item_style_cart"
+                android:drawableTop="@drawable/selector_menu_item_cart"
+                android:text="购物车"
+                android:textColor="#000"
+                android:button="@null"
+                android:checked="false"/>
+            <LinearLayout
+                android:id="@+id/shopping_cart_num_bg"
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="3dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvCartHint"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/cart_hint"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="center"
+                    android:padding="2dp"
+                    android:paddingLeft="50dp"
+                    android:text="13"
+                    android:textColor="#fff"
+                    android:textSize="12dp" />
+            </LinearLayout>
+        </RelativeLayout>
+        <RadioButton
+            android:id="@+id/btnMe"
+            style="@style/menu_item_style"
+            android:drawableTop="@drawable/selector_menu_item_personal_center"
+            android:text="我"
+            android:button="@null"
+            android:checked="false"/>
+
+    </RadioGroup>
 </RelativeLayout>
