--- a/app/src/main/res/layout/item_footer.xml
+++ b/app/src/main/res/layout/item_footer.xml
@@ -9,4 +9,5 @@
     android:textColor="#000"
     android:text="上拉加载更多"
     android:layout_marginTop="5sp"
-    android:layout_marginBottom="5sp"></TextView>
+    android:layout_marginBottom="5sp">
+</TextView>
