--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -21,7 +21,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textColor="@color/item_good_text"
-        android:text="商品名称商品名称商品名称商品名称商品名称"
+        android:text="商品名称"
         android:textSize="13sp"
         android:maxLines="2"
         android:ellipsize="end"
