--- a/app/src/main/res/layout/activity_boutique_child.xml
+++ b/app/src/main/res/layout/activity_boutique_child.xml
@@ -4,21 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/common_head_title"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl"
         android:background="@color/list_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <include layout="@layout/layout_refresh_title"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
