--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_goods_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/good_detail_bg"
-    tools:context="cn.ucai.fulicenter.activity.GoodsDetailActivity">
-
+    tools:context=".activity.GoodsDetailActivity">
+    <!--调用另一个页面写好的head_title-->
     <RelativeLayout
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="@color/main_orange">
         <include layout="@layout/common_head_title"/>
+        <!--分享-->
         <ImageView
-            android:id="@+id/iv_good_share"
+            android:id="@+id/iv_goods_share"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:padding="5dp"
             android:src="@drawable/selector_share_bg"/>
+        <!--收藏-->
         <ImageView
-            android:id="@+id/iv_good_collect"
+            android:id="@+id/iv_goods_collect"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/iv_good_share"
+            android:layout_toLeftOf="@+id/iv_goods_share"
             android:padding="5dp"
             android:src="@mipmap/bg_collect_in"/>
+        <!--购物车-->
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/iv_good_collect">
+            android:layout_toLeftOf="@+id/iv_goods_collect">
+            <!--购物车图片-->
             <ImageView
-                android:id="@+id/iv_good_cart"
+                android:id="@+id/iv_goods_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:padding="5dp"
                 android:src="@mipmap/bg_cart_selected"/>
+            <!--购物车数量-->
             <TextView
                 android:id="@+id/tv_cart_count"
                 android:layout_width="wrap_content"
@@ -49,6 +53,7 @@
                 android:layout_alignParentTop="true"/>
         </RelativeLayout>
     </RelativeLayout>
+    <!--中下部布局-->
     <RelativeLayout
         android:id="@+id/layout_banner"
         android:layout_width="match_parent"
@@ -56,12 +61,14 @@
         android:padding="25dp"
         android:background="@color/good_detail_bg_white"
         android:layout_below="@id/layout_title">
+        <!--商品英文名-->
         <TextView
             android:id="@+id/tv_good_name_english"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"/>
+        <!--商品中文名-->
         <TextView
             android:id="@+id/tv_good_name"
             android:layout_below="@id/tv_good_name_english"
@@ -69,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"/>
+        <!--商品价格-->
         <TextView
             android:id="@+id/tv_good_price_shop"
             android:layout_width="wrap_content"
@@ -81,39 +89,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_below="@id/tv_good_price_shop"
+            android:layout_below="@+id/tv_good_price_shop"
             android:layout_alignParentRight="true"
             android:textColor="@color/good_detail_currency_price"/>
         <RelativeLayout
             android:id="@+id/layout_image"
             android:layout_width="wrap_content"
-            android:layout_height="190dp"
+            android:layout_height="200dp"
             android:layout_marginTop="50dp"
             android:layout_below="@id/tv_good_price_current">
             <cn.ucai.fulicenter.view.SlideAutoLoopView
                 android:id="@+id/salv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/good_detail_bg_white"/>
-
-                <cn.ucai.fulicenter.view.FlowIndicator
-                    android:id="@+id/indicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    app:count="4"
-                    app:focus="0"
-                    app:focus_color="@color/good_detaul_flow_indicator_focus"
-                    app:normal_color="#a1d1d1d1"
-                    app:r="5dp"
-                    app:space="3dp"/>
-            </RelativeLayout>
-                <WebView
-                    android:id="@+id/wv_good_brief"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/layout_image"
-                    android:layout_margin="10dp"
-                    android:background="@color/good_detail_bg_white"/>
+                android:background="@color/good_detail_bg_white" />
+            <cn.ucai.fulicenter.view.FlowIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:count="4"
+                app:focus="0"
+                app:focus_color="@color/good_detaul_flow_indicator_focus"
+                app:normal_color="#a1d1d1d1"
+                app:r="5dp"
+                app:space="3dp"/>
+        </RelativeLayout>
+        <WebView
+            android:id="@+id/wv_goods_brief"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_image"
+            android:layout_margin="10dp"
+            android:background="@color/good_detail_bg_white"/>
     </RelativeLayout>
 </RelativeLayout>
