--- a/app/src/main/res/layout/item_boutique.xml
+++ b/app/src/main/res/layout/item_boutique.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_boutique_item"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
-
+        android:id="@+id/layout_boutique_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
     <ImageView
         android:id="@+id/ivBoutiqueImg"
         android:layout_width="200dp"
@@ -19,7 +18,7 @@
         android:gravity="top"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:layout_toRightOf="@id/ivBoutiqueImg"
+        android:layout_toRightOf="@+id/ivBoutiqueImg"
         android:background="@color/white">
         <TextView
             android:id="@+id/tvBoutiqueTitle"
@@ -28,7 +27,7 @@
             android:textColor="@color/list_item_title"
             android:layout_marginTop="20dp"
             android:ellipsize="end"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:text="Aug 28 201"/>
         <TextView
             android:id="@+id/tvBoutiqueName"
@@ -46,8 +45,9 @@
             android:textColor="@color/gray_normal"
             android:layout_marginTop="10dp"
             android:textSize="18sp"
-            android:maxLines="2"
+            android:minLines="2"
             android:ellipsize="end"
-            android:text="2015/W Trends Report"/>
+            android:text="2015F/w Trends Report"/>
+
     </LinearLayout>
 </RelativeLayout>
