--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -6,6 +6,7 @@
     android:background="@color/white"
     android:layout_margin="15dp"
     android:id="@+id/layout_goods"
+    android:padding="10dp"
     android:weightSum="1">
 
     <ImageView
@@ -21,7 +22,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textColor="@color/item_good_text"
-        android:text="商品名称"
+        android:text="商品名称商品名称商品名称商品名称商品名称"
         android:textSize="13sp"
         android:maxLines="2"
         android:ellipsize="end"
