--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:hint="@string/user_name"
+                android:hint="用户名"
                 android:paddingLeft="10dp"
                 android:singleLine="true"
                 android:textColor="#000"
@@ -67,7 +67,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:hint="@string/password"
+                android:hint="密码"
                 android:inputType="textPassword"
                 android:paddingLeft="10dp"
                 android:singleLine="true"
@@ -93,7 +93,7 @@
                 android:background="@drawable/tb_btn_login_orange_normal"
                 android:gravity="center"
                 android:paddingBottom="7dp"
-                android:text="@string/login"
+                android:text="登录"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"/>
 
@@ -110,7 +110,7 @@
                 android:paddingBottom="7dp"
                 android:paddingTop="7dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/register"
+                android:text="免费注册"
                 android:textColor="#7d7676"
                 android:textSize="18sp"/>
 
