收藏商品的初始化状态

--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/good_detail_bg"
-    tools:context=".activity.GoodsDetailActivity">
+    tools:context="cn.ucai.fulicenter.activity.GoodsDetailActivity">
     <!--调用另一个页面写好的head_title-->
     <RelativeLayout
         android:id="@+id/layout_title"
