--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -43,14 +43,14 @@
                 android:padding="5dp"
                 android:src="@mipmap/bg_cart_selected"/>
             <!--购物车数量-->
-            <TextView
-                android:id="@+id/tv_cart_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"
-                android:textColor="#f00"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"/>
+            <!--<TextView-->
+                <!--android:id="@+id/tv_cart_count"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="10"-->
+                <!--android:textColor="#f00"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_alignParentTop="true"/>-->
         </RelativeLayout>
     </RelativeLayout>
     <!--中下部布局-->
