--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -127,11 +127,7 @@
                 android:textSize="18sp"/>
         </LinearLayout>
     </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@id/layout_order"
-        android:background="@color/gray_pressed"/>
+
     <RelativeLayout
         android:id="@+id/layout_order"
         android:layout_width="match_parent"
@@ -144,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@id/tv_order_buy"
+            android:layout_marginLeft="60dp"
             android:textColor="@color/google_red"
             android:text="合计:￥0"
             android:textSize="16sp"/>
